@@ -12,6 +12,7 @@ Blue=[color=blue]__1__[/color]
 craft=[color=blue]__1__ __4__: 1個製作\n__1__ __5__: 5個製作\n__3__ __4__: 可能な数全て製作[/color]
 research=[color=blue]__2__ __4__; 研究を始める[/color]
 selector=ヘルプの対象を選択します。
+initial-technology=最初にロック解除
 
 [mod-setting-name]
 ingteb_column-tab-threshold=列数が指定した値より大きい場合はタブを使用します。
